--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -186,6 +186,26 @@ code {
   width: 3rem;
 }
 
+.segmentation-box {
+  padding: 15px;
+  display: block;
+}
+
+.morpheme-box {
+  background: #ddf;
+  padding: 15px;
+  border: solid black 2px;
+  border-radius: 10 px;
+  display: inline-block;
+}
+
+.field-box {
+  white-space: pre-line;
+  padding: 15px;
+  display: table-row;
+  size: 5;
+}
+
 /*
 .leftList, rightList {
   display: inline;
