Download accumulated changes

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -218,6 +218,11 @@ code {
   margin-left: 2rem;
 }
 
+.button-stack {
+  position: fixed;
+  display: grid;
+}
+
 /*
 .leftList, rightList {
   display: inline;
