Show automatic replacements to the user

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -223,6 +223,11 @@ code {
   display: grid;
 }
 
+.info-box {
+  display: table-cell;
+  padding: 10px;
+}
+
 /*
 .leftList, rightList {
   display: inline;
