Adjust column sizes

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -243,6 +243,10 @@ code {
   display: table-row;
 }
 
+.uneven-columns {
+  grid-template-columns: auto 15rem;
+}
+
 /*
 .leftList, rightList {
   display: inline;
