--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -45,6 +45,14 @@ code {
   font-family: UllikumiA, sans-serif;
 }
 
+.font-body-ullikumi {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, UllikumiA;
+}
+
+.xml-source-editor .cm-line {
+  font-family: monospace, UllikumiA;
+}
+
 /* Word content styles */
 
 .font-non-italic {
